new font and added video player to hero home page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="//db.onlinewebfonts.com/c/a1986ddbe57c1c5ab4296ab1028a02df?family=Nudista+SemiBold" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="/style/main.css">
     <title>GM Construction</title>
 </head>
@@ -78,6 +78,13 @@
                 <div class="swiper-slide home-hero-4" ></div>
             </div>
             <div class="swiper-pagination"></div>
+        </div>
+        <div class="video-container">
+            <div class="video-close">
+                <i class="fa-solid fa-xmark"></i>
+            </div>
+            <iframe class="gm-video" src=""  frameborder="0" allow="autoplay; fullscreen"></iframe>
+
         </div>
     </section>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
