fixed bug with transition running on page load

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <!-- Style -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
-    <link href="//db.onlinewebfonts.com/c/a1986ddbe57c1c5ab4296ab1028a02df?family=Nudista+SemiBold" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="/style/main.css">
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <title>GM Construction</title>
 </head>
-<body>
+<body class="body preload">
     <!-- ************************ -->
     <!-- ====== NAVIGATION ====== -->
     <!-- ************************ -->
