--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
                 <i class="fa-solid fa-xmark"></i>
             </div>
             <iframe class="gm-video" src=""  frameborder="0" allow="autoplay; fullscreen"></iframe>
-
+            <div class="video-spinner spinner">
+                <div class="double-bounce1"></div>
+                <div class="double-bounce2"></div>
+            </div>
         </div>
     </section>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
