added intro section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,17 @@
             </div>
         </div>
     </section>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    
+    <!-- Home and about section -->
+    <section class="intro" >
+        <img class="intro-img" src="/images/about-01.jpg" alt="">
+        <div class="intro-text">
+            <span class="heading" >EST. 1989</span>
+            <h2 class="section-title" >OUR HERITAGE IS BUILDING YOUR FUTURE</h2>
+            <p>We undertake projects of all shapes and sizes - each and every one of which is treated with the same core values that characterise our company - honesty, integrity, professional advice and quality craftmanship.</p>
+            <a href="#" class="intro-link">ABOUT US</a>
+        </div>
+    </section>
 
     <!-- Script -->
     <script defer src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
