added our services section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,37 @@
             <a href="#" class="intro-link">ABOUT US</a>
         </div>
     </section>
+    <!-- home services -->
+    <section class="home-services" >
+        <div class="service-bg" style="background-image: linear-gradient(rgba(12, 16, 23, 0.702),rgba(12, 16, 23, 0.702)) , url(/images/our-service-2.jpg);"></div>
+        <div class="service-bg" style="background-image: linear-gradient(rgba(12, 16, 23, 0.702),rgba(12, 16, 23, 0.702)) , url(/images/our-service-1.jpg);"></div>
+        <div class="service-bg" style="background-image: linear-gradient(rgba(12, 16, 23, 0.702),rgba(12, 16, 23, 0.702)) , url(/images/our-service-4.jpg);"></div>
+        <div class="service-bg" style="background-image: linear-gradient(rgba(12, 16, 23, 0.702),rgba(12, 16, 23, 0.702)) , url(/images/our-service-3.jpg);"></div>
+        <div class="home-service">
+            <div class="bg-mobile" style="background-image: linear-gradient(rgba(12, 16, 23, 0.702),rgba(12, 16, 23, 0.702)) , url(/images/our-service-2.jpg);"></div>
+            <h3>CONSTRUCTION</h3>
+            <a href="#" class="home-service__link">LEARN MORE</a>
+            <a href="#" class="mobile-link"></a>
+        </div>
+        <div class="home-service">
+            <div class="bg-mobile" style="background-image: linear-gradient(rgba(12, 16, 23, 0.702),rgba(12, 16, 23, 0.702)) , url(/images/our-service-1.jpg);"></div>
+            <h3>TIMBER SYSTEM</h3>
+            <a href="#" class="home-service__link">LEARN MORE</a>
+            <a href="#" class="mobile-link"></a>
+        </div>
+        <div class="home-service">
+            <div class="bg-mobile" style="background-image: linear-gradient(rgba(12, 16, 23, 0.702),rgba(12, 16, 23, 0.702)) , url(/images/our-service-4.jpg);"></div>
+            <h3>PLANT HIRE</h3>
+            <a href="#" class="home-service__link">LEARN MORE</a>
+            <a href="#" class="mobile-link"></a>
+        </div>
+        <div class="home-service">
+            <div class="bg-mobile" style="background-image: linear-gradient(rgba(12, 16, 23, 0.702),rgba(12, 16, 23, 0.702)) , url(/images/our-service-3.jpg);"></div>
+            <h3>HAULAGE</h3>
+            <a href="#" class="home-service__link">LEARN MORE</a>
+            <a href="#" class="mobile-link"></a>
+        </div>
+    </section>
 
     <!-- Script -->
     <script defer src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
