added projects to home page

--- a/index.html
+++ b/index.html
@@ -135,7 +135,49 @@
             <a href="#" class="mobile-link"></a>
         </div>
     </section>
-
+    <section class="selected-projects" >
+        <div class="container">
+            <span class="heading" >SELECTED PROJECTS</span>
+            <div class="wrapper-f">
+                <!-- 0 -->
+                <article class="project-container" >
+                    <img class="project-img" src="/images/hero-1.jpg" alt="">
+                    <div class="project-text">
+                        <h3 class=".project-title" >LYNWOOD</h3>
+                        <div class="tags">
+                            <p>Residential</p>
+                            <p>Renovation</p>
+                        </div>
+                        <a href="#" class="project-link">VIEW PROJECT</a>
+                    </div>
+                </article>
+                <!-- 1 -->
+                <article class="project-container" >
+                    <img class="project-img" src="/images/project-1.jpg" alt="">
+                    <div class="project-text">
+                        <h3 class=".project-title" >ALVADELL</h3>
+                        <div class="tags">
+                            <p>Residential</p>
+                            <p>Renovation</p>
+                        </div>
+                        <a href="#" class="project-link">VIEW PROJECT</a>
+                    </div>
+                </article>
+                <!-- 2 -->
+                <article class="project-container" >
+                    <img class="project-img" src="/images/project-2.jpg" alt="">
+                    <div class="project-text">
+                        <h3 class=".project-title" >HIGHLAND PAVILION</h3>
+                        <div class="tags">
+                            <p>Residential</p>
+                            <p>Renovation</p>
+                        </div>
+                        <a href="#" class="project-link">VIEW PROJECT</a>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>
     <!-- Script -->
     <script defer src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script defer src="/script/sliders.js" ></script>
