added contact cta section on home page

--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@
             </div>
         </div>
     </section>
+    <section class="contact-cta">
+        <h2 class="section-title" >READY TO DISCUSS YOUR NEXT PROJECT?</h2>
+        <button class="contact-cta-btn" >GET IN TOUCH</button>
+    </section>
     <!-- Script -->
     <script defer src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script defer src="/script/sliders.js" ></script>
