--- a/index.html
+++ b/index.html
@@ -182,6 +182,29 @@
         <h2 class="section-title" >READY TO DISCUSS YOUR NEXT PROJECT?</h2>
         <button class="contact-cta-btn" >GET IN TOUCH</button>
     </section>
+    <footer class="footer" >
+        <div class="footer-wrap container">
+            <h1 class="footer-logo">GM</h1>
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="#" class="footer-link">HOME</a></li>
+                    <li><a href="#" class="footer-link">PROJECTS</a></li>
+                    <li><a href="#" class="footer-link">SERVICES</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#" class="footer-link">ABOUT</a></li>
+                    <li><a href="#" class="footer-link">CONTACT</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#" class="footer-link">TERMS</a></li>
+                    <li><a href="#" class="footer-link">PRIVACY</a></li>
+                </ul>
+            </nav>
+            <a href="#" class="footer-btn">START A PROJECT</a>
+            <p>© 2022 Gordon Mitchell Contractors</p>
+
+        </div>
+    </footer>
     <!-- Script -->
     <script defer src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script defer src="/script/sliders.js" ></script>
