--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <ul class="navbar">
                 <li class="navbar-item"><a class="navbar-link active-link" href="#">Home</a></li>
-                <li class="navbar-item"><a class="navbar-link" href="#">Services</a></li>
+                <li class="navbar-item"><a class="navbar-link" href="/html/services.html">Services</a></li>
                 <li class="navbar-item"><a class="navbar-link" href="#">Projects</a></li>
                 <li class="navbar-item"><a class="navbar-link" href="#">About</a></li>
                 <li class="navbar-item"><a class="navbar-link" href="#">Contact</a></li>
@@ -41,7 +41,7 @@
         </div>
         <ul class="menu">
             <li class="menu-item"><a class="menu-link active-mlink" href="#">HOME</a></li>
-            <li class="menu-item"><a class="menu-link" href="#">SERVICES</a></li>
+            <li class="menu-item"><a class="menu-link" href="/html/services.html">SERVICES</a></li>
             <li class="menu-item"><a class="menu-link" href="#">PROJECTS</a></li>
             <li class="menu-item"><a class="menu-link" href="#">ABOUT</a></li>
             <li class="menu-item"><a class="menu-link" href="#">CONTACT</a></li>
@@ -93,7 +93,6 @@
             </div>
         </div>
     </section>
-    
     <!-- Home and about section -->
     <section class="intro" >
         <img class="intro-img" src="/images/about-01.jpg" alt="">
@@ -178,10 +177,12 @@
             </div>
         </div>
     </section>
+    <!-- ====== CONTACT CTA ====== -->
     <section class="contact-cta">
         <h2 class="section-title" >READY TO DISCUSS YOUR NEXT PROJECT?</h2>
         <button class="contact-cta-btn" >GET IN TOUCH</button>
     </section>
+    <!-- ====== FOOTER ====== -->
     <footer class="footer" >
         <div class="footer-wrap container">
             <h1 class="footer-logo">GM</h1>
@@ -189,7 +190,7 @@
                 <ul>
                     <li><a href="#" class="footer-link">HOME</a></li>
                     <li><a href="#" class="footer-link">PROJECTS</a></li>
-                    <li><a href="#" class="footer-link">SERVICES</a></li>
+                    <li><a href="/html/services.html" class="footer-link">SERVICES</a></li>
                 </ul>
                 <ul>
                     <li><a href="#" class="footer-link">ABOUT</a></li>
@@ -208,6 +209,8 @@
     <!-- Script -->
     <script defer src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script defer src="/script/sliders.js" ></script>
+    <script defer src="/script//navigation.js" ></script>
+    <script defer src="/script/pages/home.js" ></script>
     <script defer src="/script/main.js" ></script>
 </body>
 </html>
