--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <div class="line"></div>
             </div>
             <ul class="navbar">
-                <li class="navbar-item"><a class="navbar-link active-link" href="#">Home</a></li>
+                <li class="navbar-item"><a class="navbar-link active-link" href="/index.html">Home</a></li>
                 <li class="navbar-item"><a class="navbar-link" href="/html/services.html">Services</a></li>
                 <li class="navbar-item"><a class="navbar-link" href="#">Projects</a></li>
                 <li class="navbar-item"><a class="navbar-link" href="#">About</a></li>
-                <li class="navbar-item"><a class="navbar-link" href="#">Contact</a></li>
+                <li class="navbar-item"><a class="navbar-link" href="/html/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -44,7 +44,7 @@
             <li class="menu-item"><a class="menu-link" href="/html/services.html">SERVICES</a></li>
             <li class="menu-item"><a class="menu-link" href="#">PROJECTS</a></li>
             <li class="menu-item"><a class="menu-link" href="#">ABOUT</a></li>
-            <li class="menu-item"><a class="menu-link" href="#">CONTACT</a></li>
+            <li class="menu-item"><a class="menu-link" href="/html/contact.html">CONTACT</a></li>
         </ul>
         <div class="menu-contact">
             <div>
